--- a/Client/index.html
+++ b/Client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="../Client/src/assets/images/img/logo.png" />
+    <link rel="icon" type="image" href="../Client/src/assets/images/img//logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Pablo Risi | Desarrollador Frontend & Backend</title>
+    <title>Portafolio Pablo Matías Risi | Desarrollador Frontend & Backend</title>
   </head>
   <body>
     <div id="root"></div>
